--- a/react-express/src/index.scss
+++ b/react-express/src/index.scss
@@ -13,3 +13,7 @@
 // }
 
 @import './styles/global.scss';
+@import './styles/Navbar.scss';
+@import './styles/Login.scss';
+@import './styles/Signup.scss';
+@import './styles/Stock.scss';
